--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>甜蜜扭蛋机</title>
+    <title>小猫扭蛋机</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>甜蜜扭蛋机</h1>
+        <h1>小猫扭蛋机</h1>
         <div class="balance-container">
             <p>当前余额: <span id="balance">100</span> 硬币</p>
         </div>
