--- a/admin.html
+++ b/admin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>扭蛋机管理</title>
+    <title>小猫扭蛋机管理</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container admin-container">
-        <h1>扭蛋机管理</h1>
+        <h1>小猫扭蛋机管理</h1>
         <div class="admin-section">
             <h2>修改余额</h2>
             <div class="balance-form">
