--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>当前余额: <span id="balance">100</span> 硬币</p>
         </div>
         <div class="gashapon-machine">
-            <img src="https://i.imgur.com/pKeWJQf.png" alt="扭蛋机" class="machine-img">
+            <img src="https://i0.hdslb.com/bfs/article/b7f68aac82c494ccb1cbf27e5c75b58f428358239.jpg" alt="扭蛋机" class="machine-img">
             <button id="draw-button">扭蛋 (消耗10硬币)</button>
         </div>
         <div id="result" class="result-container" style="display: none;">
